--- a/apps/frontend/src/styles/mode-dark.scss
+++ b/apps/frontend/src/styles/mode-dark.scss
@@ -115,6 +115,10 @@
 
   .card.overview-balance-card {
     box-shadow: 1px 1px 2px 2px rgba($light-dark, 0.20);
+    color: $dark;
+    .text-dark-primary {
+      color: $dark;
+    }
   }
 
   span.span-close-svg {
