--- a/apps/frontend/src/styles/mode-light.scss
+++ b/apps/frontend/src/styles/mode-light.scss
@@ -98,7 +98,7 @@
 
   .card.overview-balance-card {
     box-shadow: 0px 4px 8px 0px $gray-400;
-    color: $white;
+    color: $dark;
   }
 
   .list-group-item,
